Add Gemini 2.5 support; both use internal thinking by default: https://ai.google.dev/gemini-api/docs/thinking. Thinking budget will be limited bymax output token. If max output token too small, generation stops prematurely.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ keywords = ["google", "generative", "ai", "gemini", "client"]
 
 [features]
 beta = []
+gemini_2_5 = []
 
 [dependencies]
 bytecount = "0.6.7"
